# parser-auto.ria

./: Dockerfile  README.md  adverts.vcf  docker-compose.yml  env.example  pyproject.toml
alembic/: env.py
alembic/versions/: b9756f1cf153_initial_tables.py
app/: main.py
app/api/endpoints/: __init__.py  adverts.py  jobs.py  parse.py
app/core/: celery.py  config.py  dependencies.py  error.py  lifespan.py
app/db/: redis.py  session.py
app/models/: __init__.py  advert.py
app/repositories/: advert.py  job.py
app/schemas/: adverts.py
app/scraper/: car_page.py  search_page.py  test_car_parser.py
app/services/: job.py  parse.py
app/tasks/: parse.py
